--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,10 @@
 .app.dark {
-    --bg-color: rgb(35, 35, 35);
-    --primary-color: #dd67be;
-    --secondary-color: #e4e4e4ea;
+  --bg-color: rgb(35, 35, 35);
+  --inverted-bg-color: #e4e4e4ea;
+
+  --primary-color: #dd67be;
+  --secondary-color: #e4e4e4ea;
+
+  --inverted-primary-color: #dd67be;
+  --inverted-secondary-color: rgb(35, 35, 35);
 }
