build: set up hot module replacement

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -9,6 +9,14 @@
 
 .collapsed {
   width: var(--sidebar-width-collapsed);
+
+  .switchers {
+    flex-direction: column;
+  }
+
+  .themeSwitcher {
+    margin-bottom: 5px;
+  }
 }
 
 .switchers {
