build: set up stylelint and plugin i18next

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,10 +1,8 @@
 .app.dark {
-  --bg-color: rgb(35, 35, 35);
+  --bg-color: rgb(35 35 35);
   --inverted-bg-color: #e4e4e4ea;
-
   --primary-color: #dd67be;
   --secondary-color: #e4e4e4ea;
-
   --inverted-primary-color: #dd67be;
-  --inverted-secondary-color: rgb(35, 35, 35);
+  --inverted-secondary-color: rgb(35 35 35);
 }
