--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,10 +1,8 @@
 .app.light {
   --bg-color: #e4e4e4ea;
-  --inverted-bg-color: rgb(35, 35, 35);
-
+  --inverted-bg-color: rgb(35 35 35);
   --primary-color: #dd67be;
-  --secondary-color: rgb(35, 35, 35);
-
+  --secondary-color: rgb(35 35 35);
   --inverted-primary-color: #dd67be;
   --inverted-secondary-color: #e4e4e4ea;
 }
