--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -9,3 +9,11 @@
   border: none;
   background: transparent;
 }
+
+.bright {
+  padding: 5px;
+  margin: 0;
+  background-color: var(--primary-color);
+  border-radius: 5px;
+  color: var(--secondary-color);
+}
